augment syslog entries with server information
