# pilotctl/receivers/mongo/docs/swagger.yaml
@@ -21,9 +21,9 @@ definitions:
         type: string
       machine_id:
         type: string
-      organisation:
+      org:
         type: string
-      organisation_group:
+      org_group:
         type: string
       priority:
         type: integer
@@ -72,6 +72,55 @@ paths:
       tags:
       - General
   /events:
+    get:
+      description: Returns a list of syslog entries following the specified filter
+      parameters:
+      - description: the organisation of the device where the syslog entry was created
+        in: query
+        name: og
+        type: string
+      - description: the organisation of the device where the syslog entry was created
+        in: query
+        name: or
+        type: string
+      - description: the area of the device where the syslog entry was created
+        in: query
+        name: ar
+        type: string
+      - description: the location of the device where the syslog entry was created
+        in: query
+        name: lo
+        type: string
+      - description: syslog entry tag
+        in: query
+        name: tag
+        type: string
+      - description: the syslog entry priority
+        in: query
+        name: pri
+        type: string
+      - description: the syslog entry severity
+        in: query
+        name: sev
+        type: string
+      - description: the syslog entry time following the format ddMMyyyyHHmmSS
+        in: query
+        name: time
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get filtered events
+      tags:
+      - Query
     post:
       description: submits syslog events to be persisted for further use
       parameters:
